# 新增演示页面

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "topthink/think-multi-app": "^1.0",
         "topthink/think-view": "^1.0",
         "iayoo/api-response": "dev-master",
-        "topthink/think-captcha": "^3.0"
+        "topthink/think-captcha": "^3.0",
+        "zifan/addressparser": "^2.1",
+        "alapi/address_parse": "^0.0.3"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
